Handle missing index idents during replica set startup recovery after unclean shutdown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0, 8.0.24, 7.0.41
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • Storage Execution 2025-05-12
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We may fail to start up in a replica set after an unclean shutdown with unfinished index builds. This scenario specifically:

      • Replica set node crashes during an index build
      • During startup recovery as a replica set node, we drop the index table to rebuild the index, but the node crashes again. This may leave a state with an index in the catalog but a missing index table.
      • When starting the node again in the replica set, the following error occurs:
      [       163.418] [antithesis/pods/primary/mongodb.log] [inf] | 2025-04-28T07:17:05.353+00:00 F  ASSERT   23093       [initandlisten] "Fatal assertion","attr":
      {
          msgid: 28579,
          error: "UnsupportedFormat: Unable to find metadata for table:index-5f77a689-40f9-4a26-9d1a-e6d102b27657 Index: {name: geo_2dsphere, ns: 00000000-0000-0000-0000-000000000000} - version either too old or too new for this mongod.",
          location: "src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp:643:58:key_string::Version mongo::WiredTigerIndex::_handleVersionInfo(OperationContext *, const std::string &, StringData, const IndexConfig &, bool)"
      } 

       

            Assignee:
            Thomas Goyne
            Reporter:
            Yuhong Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: