SERVER-104464 Allow index idents to be missing when loading the index catalog (#35654)

GitOrigin-RevId: 3f9902f38fa35db0bfceec78f661c3b49770e734